tests/pos/i1378.scala
object Test {
  (1, x => 2): (Int, Int => Int)
}
