tests/neg/inline-position/A_1.scala
object A {

  transparent def f(x: => Object) = (x, x)

}